Added TNT Archetype and 35 New Block Textures